--- a/src/component/UI/Content/DynamicContent/Category/styles.module.scss
+++ b/src/component/UI/Content/DynamicContent/Category/styles.module.scss
@@ -8,6 +8,7 @@
   @extend .flex;
   width: 100%;
   justify-content: space-between;
+  align-items: center;
   .listItem {
     @extend .flex;
     align-items: center;
