--- a/src/component/UI/Content/ImageBlock/styles.module.scss
+++ b/src/component/UI/Content/ImageBlock/styles.module.scss
@@ -1,41 +1,44 @@
 .img {
-	$height: var(--height-offset);
-	cursor: pointer;
-	position: relative;
-	top: 0;
-	// background: #eee;
-	background-color: transparent;
-	border-radius: 4px;
-	overflow: hidden;
-	transition: all 0.2s;
-	&:before {
-		padding-bottom: $height;
-		display: block;
-		content: '';
-	}
-	img {
-		height: 100%;
-		width: 100%;
-		object-position: center;
-		object-fit: cover;
-		border: 0;
-		position: absolute;
-		top: 0;
-		left: 0;
-		border-radius: 4px;
-		transition: all 0.2s;
-	}
-
-	&:hover {
-		img {
-			transform: scale(1.1);
-		}
-		&.border {
-			border: 1px solid rgba(233, 102, 49, 0.6);
-		}
-	}
+  $height: var(--height-offset);
+  cursor: pointer;
+  position: relative;
+  top: 0;
+  // background: #eee;
+  background-color: transparent;
+  border-radius: 4px;
+  overflow: hidden;
+  transition: all 0.2s;
+  &:before {
+    padding-bottom: $height;
+    display: block;
+    content: '';
+  }
+  img {
+    height: 100%;
+    width: 100%;
+    object-position: center;
+    object-fit: cover;
+    border: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 4px;
+    transition: all 0.2s;
+  }
+  
 }
 
 .border {
-	border: 1px solid rgba(233, 102, 49, 0.15);
+  border: 1px solid rgba(233, 102, 49, 0.15);
+}
+
+.imgHover {
+  &:hover {
+    img {
+      transform: scale(1.1);
+    }
+    &.border {
+      border: 1px solid rgba(233, 102, 49, 0.6);
+    }
+  }
 }
